# simplified-vla-structure

./: .gitignore  AGENTS.md  CHANGELOG.md  LEARNING_GUIDE.md  README.md  RESULTS.md  pyproject.toml  requirements.txt  researchnotes.md
analysis/: README.md  __init__.py  efficiency_curve.py  policy_failures.py
assets/: pickup_scene.xml  simple_arm.xml  so101_arm.xml  so101_scene.xml
configs/: phase5_evaluation_protocol_v2.json  state_bc_efficiency_protocol_v1.json
demos/: add_midway_music.py  render_midway_demo.py
evidence/: README.md  h_ee_002_hybrid_gain_sweep.json  h_ee_015_fsm_upper_bound.json  phase5_causal_synthesis.json  phase5_v2_final_results.json  phase5_v2_model_selection.json  state_bc_efficiency_curve_matrix_dry_run.json  state_bc_efficiency_curve_registration.json
experiments/: README.md  run.py
prompts/: goal-01-phase5-synthesis-freeze.md  goal-02-efficiency-curve-preregistration.md  goal-03-pick-place-bc-replication.md  goal-04-second-controller-replication.md  goal-post-h-ee-014-residual.md  h-ee-002-hybrid-gain-sweep.md  h-ee-007-label-contract-probe.md  h-ee-014-nn-gripper-plan.md  h-ee-015-fsm-arm-upper-bound.md  post-h-ee-014-residual-plan.md
reports/: 2026-07-08-h-ee-008-gripper-weighted-mse.md  2026-07-08-h-ee-013-env-phase.md  2026-07-08-phase6a-vision-infra.md  2026-07-09-h-ee-003-separate-gripper-head.md  2026-07-09-h-ee-014-nn-gripper.md  2026-07-09-h-ee-021-loss-decomposition.md  2026-07-09-post-h-ee-014-residual-progress.md  2026-07-09-research-codebase-audit-and-directions.md  2026-07-09-research-console-dashboard.md  (+7 more)
(+94 files in other folders)
