[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "simplified-vla-structure"
version = "0.1.0"
description = "Controller-first simulation scaffold for small VLA action-space experiments."
requires-python = ">=3.12"
dependencies = [
  "mujoco>=3.10",
  "numpy>=2.0",
  "pygame>=2.6",
  "scipy>=1.14",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
